[package]
name = "tihu-native"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "tihu-native is a native toolset written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
anyhow = "1"
async-trait = "0.1"
quick-xml = "0.36"
hyper = "1"
http-body-util = "0.1"
tihu = { version = "0.1.0", path="../tihu" }