[package]
name = "tihu-native"
version = "0.1.14"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "tihu-native is a native toolset written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1"
thiserror = "2"
anyhow = "1"
serde_json = "1"
futures = "0.3"
pin-project = "1"
async-trait = "0.1"
quick-xml = "0.37"
headers = "0.4.0"
http = "1"
hyper = "1"
http-body-util = "0.1"
sync_wrapper = { version = "1", features = ["futures"] }
tihu = { version = "0.1.3", path="../tihu" }