[package]
name = "tihu"
version = "0.1.1"
authors.workspace = true
edition.workspace = true
license.workspace = true
description = "tihu is a toolset written in Rust."

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
bytes = "1"
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.1"
integer-encoding = "4"
thiserror = "1"
anyhow = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"